# EPIC-R

./: DESCRIPTION  NAMESPACE  README.md  cleanup  configure.ac  readme.md
R/: EfficientPowerIndices.R  RcppExports.R
src/: AbsoluteBanzhaf.cpp  AbsoluteBanzhaf.h  AbsolutePowerIndexG.cpp  AbsolutePowerIndexG.h  AbsolutePublicGood.cpp  Banzhaf.cpp  Banzhaf.h  BanzhafBelow.cpp  BanzhafBelow.h  BanzhafOwen.cpp  BigIntCalculator.cpp  BigIntCalculator.h  ChineseRemainder.cpp  ChineseRemainder.h  ColemanCollective.cpp  ColemanInitiative.cpp  ColemanPreventive.cpp  DataInput.cpp  DataOutput.cpp  DeeganPackel.cpp  EfficientPowerIndicesInterface.cpp  EfficientPowerIndicesInterface.h  FelsenthalIndex.cpp  FloatToIntRepresentation.h  Game.cpp  GlobalCalculator.cpp  HarsanyiNashIndex.cpp  IndexFactory.cpp  ItfLargeNumberCalculator.cpp  ItfLargeNumberCalculator.h  ItfPowerIndex.h  Johnston.cpp  KoenigBraeuninger.cpp  KoenigBraeuningerPH.cpp  LargeNumber.h  Logging.h  Makevars.in  Makevars.win  Nevison.cpp  NevisonPH.cpp  (+62 more)
